Feat : 헤더 컨텐츠생성 버튼, 컨텐츠모달창 취소 버튼 인터렉션

--- a/project-motion/index.html
+++ b/project-motion/index.html
@@ -7,15 +7,16 @@
     <title>Motion</title>
     <link rel="stylesheet" href="index.css" />
   </head>
+
   <body>
-    <!-- <div class="m-input-window">
+    <div class="m-input-media-window">
       <div class="m-input-box">
         <div class="m-input-delete">
           <img class="m-delete-button" src="./src/assets/images/delete.svg" alt="" />
         </div>
         <div class="m-input">
-          <label for="input-title">Title</label>
-          <input type="text" id="input-title" name="input-title" />
+          <label for="input-media-title">Title</label>
+          <input type="text" id="input-media-title" name="input-title" />
           <label for="url">URL</label>
           <input type="text" id="url" name="url" />
         </div>
@@ -23,15 +24,15 @@
           <button class="m-header-botton">ADD</button>
         </div>
       </div>
-    </div> -->
-    <div class="m-input-window">
+    </div>
+    <div class="m-input-memo-window">
       <div class="m-input-box">
         <div class="m-input-delete">
           <img class="m-delete-button" src="./src/assets/images/delete.svg" alt="" />
         </div>
         <div class="m-input">
-          <label for="input-title">Title</label>
-          <input type="text" id="input-title" name="input-title" />
+          <label for="input-memo-title">Title</label>
+          <input type="text" id="input-memo-title" name="input-title" />
           <label for="body">Body</label>
           <textarea id="body" name="body" rows="5" cols="33"></textarea>
         </div>
@@ -67,8 +68,6 @@
           </div>
           <div class="m-delete">
             <img class="m-delete-button" src="./src/assets/images/delete.svg" alt="" />
-            <!-- <span class="m-delete-button-left">-</span>
-            <span class="m-delete-button-right">-</span> -->
           </div>
         </div>
 
@@ -79,8 +78,6 @@
           </div>
           <div class="m-delete">
             <img class="m-delete-button" src="./src/assets/images/delete.svg" alt="" />
-            <!-- <span class="m-delete-button-left">-</span>
-            <span class="m-delete-button-right">-</span> -->
           </div>
         </div>
 
@@ -108,8 +105,6 @@
 
           <div class="m-delete">
             <img class="m-delete-button" src="./src/assets/images/delete.svg" alt="" />
-            <!-- <span class="m-delete-button-left">-</span>
-            <span class="m-delete-button-right">-</span> -->
           </div>
         </div>
 
@@ -135,8 +130,6 @@
 
           <div class="m-delete">
             <img class="m-delete-button" src="./src/assets/images/delete.svg" alt="" />
-            <!-- <span class="m-delete-button-left">-</span>
-            <span class="m-delete-button-right">-</span> -->
           </div>
         </div>
       </div>
@@ -147,5 +140,7 @@
     </div>
 
     <script src="./dist/console.js"></script>
+    <script src="./dist/header.js"></script>
+    <script src="./dist/modal.js"></script>
   </body>
 </html>
