Feat : Motion Content drag & drop 1차 버전

--- a/project-motion/index.html
+++ b/project-motion/index.html
@@ -55,7 +55,7 @@
       </header>
 
       <div class="m-contents">
-        <div class="m-contentbox">
+        <!-- <div class="m-contentbox">
           <iframe
             class="m-youtube"
             src="https://www.youtube.com/embed/l1s2Pq1L6Lc"
@@ -112,7 +112,7 @@
           <div class="m-delete">
             <img class="m-delete-button" src="./src/assets/images/delete.svg" alt="" />
           </div>
-        </div>
+        </div> -->
       </div>
 
       <footer class="m-footer">
