--- a/project-motion/index.html
+++ b/project-motion/index.html
@@ -54,66 +54,7 @@
         </div>
       </header>
 
-      <div class="m-contents">
-        <!-- <div class="m-contentbox">
-          <iframe
-            class="m-youtube"
-            src="https://www.youtube.com/embed/l1s2Pq1L6Lc"
-            title="한사랑 산악회"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-          <div class="m-media-description">
-            <h1 class="m-main-text">Test Video</h1>
-          </div>
-          <div class="m-delete">
-            <img class="m-delete-button" src="./src/assets/images/delete.svg" alt="" />
-          </div>
-        </div>
-        <div class="m-contentbox">
-          <img class="m-image" src="https://picsum.photos/200/300" alt="motion-image" />
-          <div class="m-media-description">
-            <h1 class="m-main-text">Test Image</h1>
-          </div>
-          <div class="m-delete">
-            <img class="m-delete-button" src="./src/assets/images/delete.svg" alt="" />
-          </div>
-        </div>
-        <div class="m-contentbox">
-          <div class="m-description">
-            <h1 class="m-main-text">Tesk Note</h1>
-            <div class="m-note">
-              <p class="m-paragraph">sss</p>
-            </div>
-          </div>
-          <div class="m-delete">
-            <img class="m-delete-button" src="./src/assets/images/delete.svg" alt="" />
-          </div>
-        </div>
-        <div class="m-contentbox">
-          <div class="m-description">
-            <h1 class="m-main-text">Test Task</h1>
-            <div class="m-todo">
-              <div class="m-todo-item">
-                <input type="checkbox" id="할일1" name="할일1" />
-                <label for="할일1">할일1</label>
-              </div>
-              <div class="m-todo-item">
-                <input type="checkbox" id="할일2" name="할일2" /> <label for="할일2">할일2</label>
-              </div>
-              <div class="m-todo-item">
-                <input type="checkbox" id="할일3" name="할일3" /> <label for="할일3">할일3</label>
-              </div>
-              <div class="m-todo-item">
-                <input type="checkbox" id="할일4" name="할일4" /> <label for="할일4">할일1</label>
-              </div>
-            </div>
-          </div>
-          <div class="m-delete">
-            <img class="m-delete-button" src="./src/assets/images/delete.svg" alt="" />
-          </div>
-        </div> -->
-      </div>
+      <div class="m-contents"></div>
 
       <footer class="m-footer">
         <p>Copyright by Youngminss. All rights reserved</p>
