Feat : init setting, PageComponent init

--- a/project-motion/index.html
+++ b/project-motion/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Motion</title>
-	<link rel="stylesheet" href="index.css">
-</head>
-<body>
-	<header class='m-header'>
-		<h1 class="m-header-text">Motion</h1>
-	
-		<div>
-			<button>IMAGE</button>
-			<button>VIDEO</button>
-			<button>NOTE</button>
-			<button>TASK</button>
-		</div>
-	</header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Motion</title>
+    <link rel="stylesheet" href="style/style.css" />
+    <script type="module" src="./dist/app.js" defer></script>
+    <script src="./dist/console.js" defer></script>
+  </head>
+  <body>
+    <div class="app">
+      <header class="banner">
+        <h1 class="banner__title">MOTION</h1>
+        <ul class="control-panel">
+          <li><button id="new-image" class="create-button">Image</button></li>
+          <li><button id="new-video" class="create-button">Video</button></li>
+          <li><button id="new-note" class="create-button">Note</button></li>
+          <li><button id="new-todo" class="create-button">Todo</button></li>
+        </ul>
+      </header>
 
-<script src='./dist/console.js'></script>
-</body>
+      <main class="document"></main>
 
-
+      <footer class="footer">
+        <p>ⓒ Copyright by Dream Coding Academy. All rights reserved.</p>
+      </footer>
+    </div>
+  </body>
 </html>
